--- a/homstPrj/homst/templates/homst/community.html
+++ b/homstPrj/homst/templates/homst/community.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>커뮤니티 메인화면</title>
+    <title>커뮤니티 메인화면1</title>
     <link rel="stylesheet" href="{%static 'css/community.css'%}" />
     <style>
       .post-thumbnail {
