--- a/homstPrj/homst/templates/homst/record_detail.html
+++ b/homstPrj/homst/templates/homst/record_detail.html
@@ -145,11 +145,11 @@
         </div>
       </div>
       <div class="home_detail_room_div">
-        <img src="{% static 'img/home_detail_room_img1.svg'  %}home_detail_room_img1.svg" alt="" class="home_detail_room_img">
+        <img src="{% static 'img/home_detail_room_img1.svg'  %}" alt="" class="home_detail_room_img">
         <div class="home_detail_room">
           <p class="home_detail_room_name">슈페리어 트윈2</p>
           <div class="home_detail_room_info_div">
-            <img src="{% static 'svg/home_detail_room_icon.svg'  %}home_detail_room_icon.svg" alt=""
+            <img src="{% static 'svg/home_detail_room_icon.svg'  %}" alt=""
               class="home_detail_room_icon">
             <div class="home_detail_room_time">
               <p>입실 15:00</p>
